embeds, render mdx

--- a/src/docs/design/typography/fonts-and-copyright.mdx
+++ b/src/docs/design/typography/fonts-and-copyright.mdx
@@ -2,9 +2,14 @@
 title: Fonts & Copyright
 ---
 
-> Fonts _can’t _be copyrighted. Code of Federal Regulations (Chapter 37) [says as much](http://www.bitlaw.com/source/37cfr/202_1.html): “The following are examples of works not subject to copyright and applications for registration of such works cannot be entertained…typeface as typeface” 
+> Fonts *can’t* be copyrighted. Code of Federal Regulations (Chapter 37) [says as much](http://www.bitlaw.com/source/37cfr/202_1.html): “The following are examples of works not subject to copyright and applications for registration of such works cannot be entertained…typeface as typeface” 
 > On the other hand, software _is _copyrightable. And many font softwares come with licensing terms that don’t allow use of the font software in the creation of commercial goods.
-> <cite>Eriq Gardner, [“NBC Universal Accused of Million-Dollar ‘Harry Potter’ Font Theft”](https://www.hollywoodreporter.com/thr-esq/nbc-universal-accused-million-dollar-209599) in The Hollywood Reporter</cite>
+>
+> <cite>
+>   Eriq Gardner, [“NBC Universal Accused of Million-Dollar ‘Harry Potter’ Font
+>   Theft”](https://www.hollywoodreporter.com/thr-esq/nbc-universal-accused-million-dollar-209599)
+>   in The Hollywood Reporter
+> </cite>
 
 Fonts are considered software. The design of the letters themselves (the “typeface”) isn’t protected; the font-as-software is. That’s why you can find so many versions of famous historic typefaces such as Helvetica, Garamond, Caslon, etc.; people have drawn their own versions to create new fonts with technically-unique (but very similar) digital outlines. How can that be?
 
@@ -15,7 +20,11 @@ When you are downloading fonts from an untrusted freebie source, you don’t kno
 ## Using Pirated Fonts
 
 > Approximately 32% of designers surveyed admitted to “locating” a copy of a font online for use in the comping process.
-> <cite>Extensis, [“Top Five Ways to Avoid Font Copyright Lawsuits”](https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits)</cite>
+>
+> <cite>
+>   Extensis, [“Top Five Ways to Avoid Font Copyright
+>   Lawsuits”](https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits)
+> </cite>
 
 Professionally-designed fonts can be expensive, and it’s understandable that you might not want to shell out the money for a font before you’re sure it’s the one you (or your company) want to use. That “try before you buy” approach could still land you in hot water.
 
@@ -27,16 +36,25 @@ You played by the rules and purchased a commercial font. Did you make sure to re
 
 > EULAs vary by foundry and can vary based on types of use that you’ve selected during the process. Do you want to use the font on the web? In a logo? Embedded into a mobile application? All of these uses are likely to incur extra costs and there may be specific language regarding usage in the EULA that was overlooked.
 > According to Exensis’s Font Compliance Survey, **close to 80% of designers don’t regularly read EULAs**.
-> <cite>Extensis, [“Top Five Ways to Avoid Font Copyright Lawsuits”](https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits)</cite>
+>
+> <cite>
+>   Extensis, [“Top Five Ways to Avoid Font Copyright
+>   Lawsuits”](https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits)
+> </cite>
 
 On a very basic level, there is typically a separate license for desktop fonts (used in design software on your computer) webfonts (used on a website), and embedded fonts in applications or other technology (mobile apps, ebooks, and more). Some font shops will give you a discount when purchasing multiple types of licenses for the same font.
 
 Licenses also only allow the font software to be installed on a specific number of computers, and violating those rules can get expensive:
 
-> In 2009, The Font Bureau, one of America’s leading type foundries, sued NBC Universal for failing to secure the rights to a handful of its trademarked fonts—fonts the media giant had used to promote programs like _The Tonight Show_ and _Saturday Night Live_.
+> In 2009, The Font Bureau, one of America’s leading type foundries, sued NBC Universal for failing to secure the rights to a handful of its trademarked fonts—fonts the media giant had used to promote programs like *The Tonight Show* and *Saturday Night Live*.
 > [According to the Society of Publication Designers](http://www.spd.org/2009/10/font-bureau-vs-nbc-must-steal.php), Font Bureau argued that NBC paid for just a single license—which permitted the company to install the typefaces on a single computer—and the rights to a limited number of fonts. “But NBC went ahead and copied the fonts to a bunch of other computers within the company,” SPD reported, “and also started using several other fonts for which licenses were never obtained.”
 > It was a big case. Font Bureau asked for “no less than $2-million” in damages. It argued that NBC’s unauthorized use “caused injury to Font Bureau’s relationships with present and prospective customers” and would “cause confusion, mistake, and deception as to the source of Font Bureau’s trademarks,” making it more difficult to broker licensing deals with other companies. The case was settled out of court, as nearly all such cases are.
-> <cite>Steven Heller, [“You Wouldn’t Think It, But Typeface Piracy Is a Big Problem”](https://www.wired.com/2015/10/you-wouldnt-think-it-but-typeface-piracy-is-a-big-problem/) in Wired</cite>
+>
+> <cite>
+>   Steven Heller, [“You Wouldn’t Think It, But Typeface Piracy Is a Big
+>   Problem”](https://www.wired.com/2015/10/you-wouldnt-think-it-but-typeface-piracy-is-a-big-problem/)
+>   in Wired
+> </cite>
 
 ## Alternatives to Piracy, or Good Fonts on a Budget
 
@@ -45,6 +63,7 @@ A student budget doesn’t mean that you are limited to system fonts or dubious 
 <figure class="wp-block-pullquote alignfull is-style-solid-color">
 
 > The only way to fight the piracy is to make alternative products more accessible and affordable
+>
 > <cite>Peter Bil’ak, Typotheque</cite>
 
 </figure>
