--- a/src/docs/design/typography/fonts-and-copyright.mdx
+++ b/src/docs/design/typography/fonts-and-copyright.mdx
@@ -2,14 +2,18 @@
 title: Fonts & Copyright
 ---
 
-> Fonts *can’t* be copyrighted. Code of Federal Regulations (Chapter 37) [says as much](http://www.bitlaw.com/source/37cfr/202_1.html): “The following are examples of works not subject to copyright and applications for registration of such works cannot be entertained…typeface as typeface” 
-> On the other hand, software _is _copyrightable. And many font softwares come with licensing terms that don’t allow use of the font software in the creation of commercial goods.
+<Blockquote
+  author="Eriq Gardner"
+  link="https://www.hollywoodreporter.com/thr-esq/nbc-universal-accused-million-dollar-209599"
+  title="NBC Universal Accused of Million-Dollar ‘Harry Potter’ Font Theft"
 >
-> <cite>
->   Eriq Gardner, [“NBC Universal Accused of Million-Dollar ‘Harry Potter’ Font
->   Theft”](https://www.hollywoodreporter.com/thr-esq/nbc-universal-accused-million-dollar-209599)
->   in The Hollywood Reporter
-> </cite>
+  <p>
+    Fonts <strong>can't</strong> be copyrighted. <Link to="http://www.bitlaw.com/source/37cfr/202_1.html">Code of Federal Regulations (Chapter 37)</Link> says as much: “The following are examples of works not subject to copyright and applications for registration of such works cannot be entertained…typeface as typeface”
+  </p>
+  <p>
+    On the other hand, software <em>is</em> copyrightable. And many font softwares come with licensing terms that don’t allow use of the font software in the creation of commercial goods.
+  </p>
+</Blockquote>
 
 Fonts are considered software. The design of the letters themselves (the “typeface”) isn’t protected; the font-as-software is. That’s why you can find so many versions of famous historic typefaces such as Helvetica, Garamond, Caslon, etc.; people have drawn their own versions to create new fonts with technically-unique (but very similar) digital outlines. How can that be?
 
@@ -19,12 +23,15 @@ When you are downloading fonts from an untrusted freebie source, you don’t kno
 
 ## Using Pirated Fonts
 
-> Approximately 32% of designers surveyed admitted to “locating” a copy of a font online for use in the comping process.
+<Blockquote
+  author="Extensis"
+  link="https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits"
+  title="Top Five Ways to Avoid Font Copyright Lawsuits"
 >
-> <cite>
->   Extensis, [“Top Five Ways to Avoid Font Copyright
->   Lawsuits”](https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits)
-> </cite>
+  <p>
+    Approximately 32% of designers surveyed admitted to “locating” a copy of a font online for use in the comping process.
+  </p>
+</Blockquote>
 
 Professionally-designed fonts can be expensive, and it’s understandable that you might not want to shell out the money for a font before you’re sure it’s the one you (or your company) want to use. That “try before you buy” approach could still land you in hot water.
 
@@ -34,41 +41,62 @@ If you pirate a font and use it in preliminary designs, there’s a good chance 
 
 You played by the rules and purchased a commercial font. Did you make sure to review its End User License Agreement (EULA) to make sure that your use case is covered?
 
-> EULAs vary by foundry and can vary based on types of use that you’ve selected during the process. Do you want to use the font on the web? In a logo? Embedded into a mobile application? All of these uses are likely to incur extra costs and there may be specific language regarding usage in the EULA that was overlooked.
-> According to Exensis’s Font Compliance Survey, **close to 80% of designers don’t regularly read EULAs**.
+<Blockquote
+  author="Extensis"
+  link="https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits"
+  title="Top Five Ways to Avoid Font Copyright Lawsuits"
 >
-> <cite>
->   Extensis, [“Top Five Ways to Avoid Font Copyright
->   Lawsuits”](https://www.extensis.com/blog/top-five-ways-to-avoid-font-copyright-lawsuits)
-> </cite>
+  <p>
+    EULAs vary by foundry and can vary based on types of use that you’ve selected during the process. Do you want to use the font on the web? In a logo? Embedded into a mobile application? All of these uses are likely to incur extra costs and there may be specific language regarding usage in the EULA that was overlooked.
+  </p>
+  <p>
+    According to Exensis’s Font Compliance Survey, <strong>close to 80% of designers don’t regularly read EULAs</strong>.
+  </p>
+</Blockquote>
 
 On a very basic level, there is typically a separate license for desktop fonts (used in design software on your computer) webfonts (used on a website), and embedded fonts in applications or other technology (mobile apps, ebooks, and more). Some font shops will give you a discount when purchasing multiple types of licenses for the same font.
 
 Licenses also only allow the font software to be installed on a specific number of computers, and violating those rules can get expensive:
 
-> In 2009, The Font Bureau, one of America’s leading type foundries, sued NBC Universal for failing to secure the rights to a handful of its trademarked fonts—fonts the media giant had used to promote programs like *The Tonight Show* and *Saturday Night Live*.
-> [According to the Society of Publication Designers](http://www.spd.org/2009/10/font-bureau-vs-nbc-must-steal.php), Font Bureau argued that NBC paid for just a single license—which permitted the company to install the typefaces on a single computer—and the rights to a limited number of fonts. “But NBC went ahead and copied the fonts to a bunch of other computers within the company,” SPD reported, “and also started using several other fonts for which licenses were never obtained.”
-> It was a big case. Font Bureau asked for “no less than $2-million” in damages. It argued that NBC’s unauthorized use “caused injury to Font Bureau’s relationships with present and prospective customers” and would “cause confusion, mistake, and deception as to the source of Font Bureau’s trademarks,” making it more difficult to broker licensing deals with other companies. The case was settled out of court, as nearly all such cases are.
+<Blockquote
+  author="Steven Heller"
+  link="https://www.wired.com/2015/10/you-wouldnt-think-it-but-typeface-piracy-is-a-big-problem/"
+  title="You Wouldn’t Think It, But Typeface Piracy Is a Big Problem"
 >
-> <cite>
->   Steven Heller, [“You Wouldn’t Think It, But Typeface Piracy Is a Big
->   Problem”](https://www.wired.com/2015/10/you-wouldnt-think-it-but-typeface-piracy-is-a-big-problem/)
->   in Wired
-> </cite>
+  <p>
+    In 2009, The Font Bureau, one of America’s leading type foundries, sued NBC Universal for failing to secure the rights to a handful of its trademarked fonts—fonts the media giant had used to promote programs like <strong>The Tonight Show</strong> and <strong>Saturday Night Live</strong>.
+  </p>
+  <p>
+    <Link to="http://www.spd.org/2009/10/font-bureau-vs-nbc-must-steal.php">According to the Society of Publication Designers</Link>, Font Bureau argued that NBC paid for just a single license—which permitted the company to install the typefaces on a single computer—and the rights to a limited number of fonts. “But NBC went ahead and copied the fonts to a bunch of other computers within the company,” SPD reported, “and also started using several other fonts for which licenses were never obtained.”.
+  </p>
+  <p>
+    It was a big case. Font Bureau asked for “no less than $2-million” in damages. It argued that NBC’s unauthorized use “caused injury to Font Bureau’s relationships with present and prospective customers” and would “cause confusion, mistake, and deception as to the source of Font Bureau’s trademarks”, making it more difficult to broker licensing deals with other companies. The case was settled out of court, as nearly all such cases are.
+  </p>
+</Blockquote>
 
 ## Alternatives to Piracy, or Good Fonts on a Budget
 
 A student budget doesn’t mean that you are limited to system fonts or dubious freebies. New platforms and offers provide options, especially those with student discounts or offers.
 
-<figure class="wp-block-pullquote alignfull is-style-solid-color">
-
-> The only way to fight the piracy is to make alternative products more accessible and affordable
+<Blockquote
+  author="Peter Bil’ak from Typotheque, quoted by Steven Heller"
+  link="https://www.wired.com/2015/10/you-wouldnt-think-it-but-typeface-piracy-is-a-big-problem/"
 >
-> <cite>Peter Bil’ak, Typotheque</cite>
-
-</figure>
+  <p>
+    The only way to fight the piracy is to make alternative products more accessible and affordable
+  </p>
+</Blockquote>
 
 One type designer, Peter Bil’ak, has created the “iTunes of fonts”: a font rental platform called [Fontstand](https://fontstand.com/). Over 50 professional type foundries have joined and offer their fonts for monthly rentals and even short free trials. If you rent for a year, the fonts are yours to keep using.
+
+<Blockquote
+  author="Fontstand"
+  link="https://fontstand.com/students"
+>
+  <p>
+    Fontstand cares about graphic design education and believes that the designers of the future should be able to use high­ quality fonts for their student projects today (without resorting to illegal means to get them). So we are proud to introduce the Fontstand Student Credit program.
+  </p>
+</Blockquote>
 
 > Fontstand cares about graphic design education and believes that the designers of the future should be able to use high­ quality fonts for their student projects today (without resorting to illegal means to get them). So we are proud to introduce the Fontstand Student Credit program.
 
