Add default link color in Mdx

--- a/src/docs/design/typography/fonts-and-copyright.mdx
+++ b/src/docs/design/typography/fonts-and-copyright.mdx
@@ -93,7 +93,7 @@ Licenses also only allow the font software to be installed on a specific number 
     In 2009, The Font Bureau, one of America’s leading type foundries, sued NBC Universal for failing to secure the rights to a handful of its trademarked fonts—fonts the media giant had used to promote programs like <strong>The Tonight Show</strong> and <strong>Saturday Night Live</strong>.
   </p>
   <p>
-    <Link to="http://www.spd.org/2009/10/font-bureau-vs-nbc-must-steal.php">According to the Society of Publication Designers</Link>, Font Bureau argued that NBC paid for just a single license—which permitted the company to install the typefaces on a single computer—and the rights to a limited number of fonts. “But NBC went ahead and copied the fonts to a bunch of other computers within the company,” SPD reported, “and also started using several other fonts for which licenses were never obtained.”.
+    <Link to="http://www.spd.org/2009/10/font-bureau-vs-nbc-must-steal.php">According to the Society of Publication Designers</Link>, Font Bureau argued that NBC paid for just a single license—which permitted the company to install the typefaces on a single computer—and the rights to a limited number of fonts. “But NBC went ahead and copied the fonts to a bunch of other computers within the company,” SPD reported, “and also started using several other fonts for which licenses were never obtained.”
   </p>
   <p>
     It was a big case. Font Bureau asked for “no less than $2-million” in damages. It argued that NBC’s unauthorized use “caused injury to Font Bureau’s relationships with present and prospective customers” and would “cause confusion, mistake, and deception as to the source of Font Bureau’s trademarks”, making it more difficult to broker licensing deals with other companies. The case was settled out of court, as nearly all such cases are.
