Add gestalt examples

--- a/src/docs/gestalt-theory/index.mdx
+++ b/src/docs/gestalt-theory/index.mdx
@@ -23,11 +23,11 @@ For some of you, the concepts may be a review from Digital 2D Design, but they a
 
 ## Key Principles
 
-There are 4 key properties with gestalt systems: emergence, reification, multistability, and invariance.
+There are 4 key properties with gestalt systems: emergence, reification, multistability, and invariance. These properties cover our general perception and the "big ideas" of gestalt. They're supported by other gestalt laws and concepts, so don't worry if your understanding of something feels like it is a match for one of these principles and another concept too.
 
 ### Emergence
 
-With _emergence_, we simplify elements to their general forms. We have an easier time interpreting simple objects than detailed ones and can "see" forms even when parts are missing.
+With _emergence_, we simplify elements to their general forms. Detailed objects can be slower and more difficult to understand, so our minds focus on the simpler options: the overall outline of a form.
 
 <figure className="grid gap-6 gap-y-12 md:grid-cols-3">
   <Panel>
@@ -252,7 +252,7 @@ With _emergence_, we simplify elements to their general forms. We have an easier
 
   <figcaption className="md:col-span-2">
     <p>
-      Even without a border, we simplify the group of many small dots into one shape: a heart.
+      Even without a border, we simplify the group of many small dots into one heart shape.
     </p>
     <p>
       Other principles and concepts discuss our ways of grouping elements, but emergence is specifically looking at that "bigger picture" and eschewing too much detail for the simpler explanation.
@@ -276,7 +276,7 @@ With _emergence_, we simplify elements to their general forms. We have an easier
 
 ### Reification
 
-With _reification_, we recognize more information that what is present; our brains fill in the gaps. Along with _closure_, this can come in handy for logos, icons, or illustrations.
+With _reification_, we recognize and deduce more information that what is present; our brains fill in the gaps. Along with _closure_, this can come in handy for logos, icons, or illustrations.
 
 <figure>
 
@@ -463,7 +463,225 @@ We can recognize objects even when they are rotated, scaled, stretched, lightly 
 
 ### Proximity
 
+Nearby objects are perceptually grouped together. Space between objects (and groups of objects) can be used to show that their content does not belong together.
+
+<figure>
+  <Panel>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.2 139.69" className="w-full fill-current">
+      <circle cx="8.04" cy="8.04" r="8.04"/>
+      <circle cx="29.46" cy="8.04" r="8.04"/>
+      <circle cx="50.89" cy="8.04" r="8.04"/>
+      <circle cx="115.17" cy="8.04" r="8.04"/>
+      <circle cx="136.6" cy="8.04" r="8.04"/>
+      <circle cx="179.46" cy="8.04" r="8.04"/>
+      <circle cx="200.88" cy="8.04" r="8.04"/>
+      <circle cx="243.74" cy="8.04" r="8.04"/>
+      <circle cx="265.17" cy="8.04" r="8.04"/>
+      <circle cx="8.04" cy="28.64" r="8.04"/>
+      <circle cx="29.46" cy="28.64" r="8.04"/>
+      <circle cx="50.89" cy="28.64" r="8.04"/>
+      <circle cx="115.17" cy="28.64" r="8.04"/>
+      <circle cx="136.6" cy="28.64" r="8.04"/>
+      <circle cx="179.46" cy="28.64" r="8.04"/>
+      <circle cx="200.88" cy="28.64" r="8.04"/>
+      <circle cx="243.74" cy="28.64" r="8.04"/>
+      <circle cx="265.17" cy="28.64" r="8.04"/>
+      <circle cx="8.04" cy="49.24" r="8.04"/>
+      <circle cx="29.46" cy="49.24" r="8.04"/>
+      <circle cx="50.89" cy="49.24" r="8.04"/>
+      <circle cx="115.17" cy="49.24" r="8.04"/>
+      <circle cx="136.6" cy="49.24" r="8.04"/>
+      <circle cx="179.46" cy="49.24" r="8.04"/>
+      <circle cx="200.88" cy="49.24" r="8.04"/>
+      <circle cx="243.74" cy="49.24" r="8.04"/>
+      <circle cx="265.17" cy="49.24" r="8.04"/>
+      <circle cx="8.04" cy="69.85" r="8.04"/>
+      <circle cx="29.46" cy="69.85" r="8.04"/>
+      <circle cx="50.89" cy="69.85" r="8.04"/>
+      <circle cx="115.17" cy="69.85" r="8.04"/>
+      <circle cx="136.6" cy="69.85" r="8.04"/>
+      <circle cx="179.46" cy="69.85" r="8.04"/>
+      <circle cx="200.88" cy="69.85" r="8.04"/>
+      <circle cx="243.74" cy="69.85" r="8.04"/>
+      <circle cx="265.17" cy="69.85" r="8.04"/>
+      <circle cx="8.04" cy="90.45" r="8.04"/>
+      <circle cx="29.46" cy="90.45" r="8.04"/>
+      <circle cx="50.89" cy="90.45" r="8.04"/>
+      <circle cx="115.17" cy="90.45" r="8.04"/>
+      <circle cx="136.6" cy="90.45" r="8.04"/>
+      <circle cx="179.46" cy="90.45" r="8.04"/>
+      <circle cx="200.88" cy="90.45" r="8.04"/>
+      <circle cx="243.74" cy="90.45" r="8.04"/>
+      <circle cx="265.17" cy="90.45" r="8.04"/>
+      <circle cx="8.04" cy="111.05" r="8.04"/>
+      <circle cx="29.46" cy="111.05" r="8.04"/>
+      <circle cx="50.89" cy="111.05" r="8.04"/>
+      <circle cx="115.17" cy="111.05" r="8.04"/>
+      <circle cx="136.6" cy="111.05" r="8.04"/>
+      <circle cx="179.46" cy="111.05" r="8.04"/>
+      <circle cx="200.88" cy="111.05" r="8.04"/>
+      <circle cx="243.74" cy="111.05" r="8.04"/>
+      <circle cx="265.17" cy="111.05" r="8.04"/>
+      <circle cx="8.04" cy="131.66" r="8.04"/>
+      <circle cx="29.46" cy="131.66" r="8.04"/>
+      <circle cx="50.89" cy="131.66" r="8.04"/>
+      <circle cx="115.17" cy="131.66" r="8.04"/>
+      <circle cx="136.6" cy="131.66" r="8.04"/>
+      <circle cx="179.46" cy="131.66" r="8.04"/>
+      <circle cx="200.88" cy="131.66" r="8.04"/>
+      <circle cx="243.74" cy="131.66" r="8.04"/>
+      <circle cx="265.17" cy="131.66" r="8.04"/>
+    </svg>
+  </Panel>
+
+  <figcaption>
+    We can perceive groups within groups. On the left is a group with 3 columns. On the right, a group with 3 columns of 2-column dots.
+  </figcaption>
+</figure>
+
+<figure>
+  <Img src="./spotify.png" alt="Screenshot of Spotify's playlist cards" />
+  <figcaption>
+    <p>
+      The <Link to="https://www.spotify.com/">Spotify</Link> "Made for You" category has many playlist cards with short descriptions. We are able to group the description to the correct card due to their close proximity, and there is enough of a gap between the images that we recognize them as separate elements.
+    </p>
+    <p>
+      The horizontal gap between images is greater than the vertical gap between the images and their descriptions, so we do not interpret this as a "row of images" and a "row of text" underneath.
+    </p>
+  </figcaption>
+</figure>
+
+### Common Region
+
+Some old-school interpretations place this within the realm of Proximity – newer laws, including this one, were added to gestalt theory later on. _Common Region_ uses boundaries such as background colors or borders to help separate and group content. These boundaries create "containers" or "blocks" for your content and are heavily used in interface design.
+
+Common Region is helpful when white space alone isn't enough to keep content separated, but too many harsh boundaries can make a design look cluttered. Worse, users might reach the end of a region and think that they've reached the end of the page or screen.
+
+<figure>
+  <Img src="./serious-eats.png" alt="Screenshot of Serious Eats homepage showing articles grouped in cards" />
+  <figcaption>
+    The <Link to="https://www.seriouseats.com/">Serious Eats</Link> site has many articles and recipes laid out in content cards. These are one of the easiest ways to create a relationship between an image and text as well as separate individual articles from each other. This is slightly different from the Spotify proximity example, as the descriptions here are contained within blocks that have a background color separating them from the page.
+  </figcaption>
+</figure>
+
+Read more: [Nielsen Norman Group, "The Principle of Common Region: Containers Create Groupings"](https://www.nngroup.com/articles/common-region/)
+
 ### Similarity
+
+Elements that are similar are grouped together. You can build similiarity with size, color, shape, and more.
+
+<figure>
+  <Panel>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.2 139.69" className="w-full fill-current text-yellow-400">
+      <g className="text-blue-500">
+        <rect width="16.07" height="16.07"/>
+        <rect x="21.43" width="16.07" height="16.07"/>
+        <rect x="42.86" width="16.07" height="16.07"/>
+        <rect x="64.28" width="16.07" height="16.07"/>
+        <rect y="20.6" width="16.07" height="16.07"/>
+        <rect x="21.43" y="20.6" width="16.07" height="16.07"/>
+        <rect x="42.86" y="20.6" width="16.07" height="16.07"/>
+        <rect x="64.28" y="20.6" width="16.07" height="16.07"/>
+        <rect y="41.21" width="16.07" height="16.07"/>
+        <rect x="21.43" y="41.21" width="16.07" height="16.07"/>
+        <rect x="42.86" y="41.21" width="16.07" height="16.07"/>
+        <rect x="64.28" y="41.21" width="16.07" height="16.07"/>
+        <rect y="61.81" width="16.07" height="16.07"/>
+        <rect x="21.43" y="61.81" width="16.07" height="16.07"/>
+        <rect x="42.86" y="61.81" width="16.07" height="16.07"/>
+        <rect x="64.28" y="61.81" width="16.07" height="16.07"/>
+        <rect y="82.41" width="16.07" height="16.07"/>
+        <rect x="21.43" y="82.41" width="16.07" height="16.07"/>
+        <rect x="42.86" y="82.41" width="16.07" height="16.07"/>
+        <rect x="64.28" y="82.41" width="16.07" height="16.07"/>
+        <rect y="103.02" width="16.07" height="16.07"/>
+        <rect x="21.43" y="103.02" width="16.07" height="16.07"/>
+        <rect x="42.86" y="103.02" width="16.07" height="16.07"/>
+        <rect x="64.28" y="103.02" width="16.07" height="16.07"/>
+        <rect y="123.62" width="16.07" height="16.07"/>
+        <rect x="21.43" y="123.62" width="16.07" height="16.07"/>
+        <rect x="42.86" y="123.62" width="16.07" height="16.07"/>
+        <rect x="64.28" y="123.62" width="16.07" height="16.07"/>
+      </g>
+      <circle cx="93.75" cy="8.04" r="8.04"/>
+      <circle cx="115.17" cy="8.04" r="8.04"/>
+      <circle cx="136.6" cy="8.04" r="8.04"/>
+      <circle cx="158.03" cy="8.04" r="8.04"/>
+      <circle cx="179.46" cy="8.04" r="8.04"/>
+      <circle cx="200.88" cy="8.04" r="8.04"/>
+      <circle cx="222.31" cy="8.04" r="8.04"/>
+      <circle cx="93.75" cy="28.64" r="8.04"/>
+      <circle cx="115.17" cy="28.64" r="8.04"/>
+      <circle cx="136.6" cy="28.64" r="8.04"/>
+      <circle cx="158.03" cy="28.64" r="8.04"/>
+      <circle cx="179.46" cy="28.64" r="8.04"/>
+      <circle cx="200.88" cy="28.64" r="8.04"/>
+      <circle cx="222.31" cy="28.64" r="8.04"/>
+      <circle cx="200.88" cy="49.24" r="8.04"/>
+      <circle cx="222.31" cy="49.24" r="8.04"/>
+      <circle cx="200.88" cy="69.85" r="8.04"/>
+      <circle cx="222.31" cy="69.85" r="8.04"/>
+      <circle cx="200.88" cy="90.45" r="8.04"/>
+      <circle cx="222.31" cy="90.45" r="8.04"/>
+      <circle cx="200.88" cy="111.05" r="8.04"/>
+      <circle cx="222.31" cy="111.05" r="8.04"/>
+      <circle cx="200.88" cy="131.66" r="8.04"/>
+      <circle cx="222.31" cy="131.66" r="8.04"/>
+      <g className="text-pink-500">
+        <circle cx="243.74" cy="8.04" r="8.04"/>
+        <circle cx="265.17" cy="8.04" r="8.04"/>
+        <circle cx="243.74" cy="28.64" r="8.04"/>
+        <circle cx="265.17" cy="28.64" r="8.04"/>
+        <circle cx="93.75" cy="49.24" r="8.04"/>
+        <circle cx="115.17" cy="49.24" r="8.04"/>
+        <circle cx="136.6" cy="49.24" r="8.04"/>
+        <circle cx="158.03" cy="49.24" r="8.04"/>
+        <circle cx="179.46" cy="49.24" r="8.04"/>
+        <circle cx="243.74" cy="49.24" r="8.04"/>
+        <circle cx="265.17" cy="49.24" r="8.04"/>
+        <circle cx="93.75" cy="69.85" r="8.04"/>
+        <circle cx="115.17" cy="69.85" r="8.04"/>
+        <circle cx="136.6" cy="69.85" r="8.04"/>
+        <circle cx="158.03" cy="69.85" r="8.04"/>
+        <circle cx="179.46" cy="69.85" r="8.04"/>
+        <circle cx="243.74" cy="69.85" r="8.04"/>
+        <circle cx="265.17" cy="69.85" r="8.04"/>
+        <circle cx="93.75" cy="90.45" r="8.04"/>
+        <circle cx="115.17" cy="90.45" r="8.04"/>
+        <circle cx="136.6" cy="90.45" r="8.04"/>
+        <circle cx="158.03" cy="90.45" r="8.04"/>
+        <circle cx="179.46" cy="90.45" r="8.04"/>
+        <circle cx="243.74" cy="90.45" r="8.04"/>
+        <circle cx="265.17" cy="90.45" r="8.04"/>
+        <circle cx="93.75" cy="111.05" r="8.04"/>
+        <circle cx="115.17" cy="111.05" r="8.04"/>
+        <circle cx="136.6" cy="111.05" r="8.04"/>
+        <circle cx="158.03" cy="111.05" r="8.04"/>
+        <circle cx="179.46" cy="111.05" r="8.04"/>
+        <circle cx="243.74" cy="111.05" r="8.04"/>
+        <circle cx="265.17" cy="111.05" r="8.04"/>
+        <circle cx="93.75" cy="131.66" r="8.04"/>
+        <circle cx="115.17" cy="131.66" r="8.04"/>
+        <circle cx="136.6" cy="131.66" r="8.04"/>
+        <circle cx="158.03" cy="131.66" r="8.04"/>
+        <circle cx="179.46" cy="131.66" r="8.04"/>
+        <circle cx="243.74" cy="131.66" r="8.04"/>
+        <circle cx="265.17" cy="131.66" r="8.04"/>
+      </g>
+    </svg>
+  </Panel>
+
+  <figcaption>
+    We easily separate the squares from the circles. Next, we form secondary color-based groups within the set of circles.
+  </figcaption>
+</figure>
+
+<figure>
+  <Img src="./grubhub.png" alt="Screenshot of Serious Eats homepage showing articles grouped in cards" />
+  <figcaption>
+    The <Link to="https://www.grubhub.com/">GrubHub</Link> sign-in page has options to sign in with an account on their site (username/password) or through separate apps (Google, Facebook). All of these are presented as similar wide, colorful buttons with centered text and small icons along the left side. The change in color helps to identify each app and show that while they're related options, they are not the <em>same</em> options.
+  </figcaption>
+</figure>
 
 ### Closure
 
