--- a/src/docs/gestalt-theory/index.mdx
+++ b/src/docs/gestalt-theory/index.mdx
@@ -11,7 +11,7 @@ reading:
       link: https://logogeek.uk/logo-design/gestalt-theory/
 ---
 
-<Blockquote link='https://languages.oup.com/google-dictionary-en/' author="Oxford Languages">
+<Blockquote link="https://languages.oup.com/google-dictionary-en/" author="Oxford Languages">
   <span className="text-2xl">ge·stalt (noun)</span>
 
   /ɡəˈSHtält/
@@ -272,7 +272,6 @@ With _emergence_, we simplify elements to their general forms. Detailed objects 
     From an evolutionary perspective, this makes a lot of sense. If you’re out wandering in a jungle, it’s in your best interest to be able to quickly identify a leopard so you don’t get attacked. It would be much less useful for you to first identify the individual shapes of its spots.
   </p>
 </Blockquote>
-
 
 ### Reification
 
