WIP content check-in

--- a/src/topics/app-icons/index.mdx
+++ b/src/topics/app-icons/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: App Icons
+topic: design-elements
 resources:
   - title: Eye-Catching App Icon Design
     link: https://www.smashingmagazine.com/2017/01/designing-better-app-icons/
