--- a/src/topics/gestalt-theory/index.mdx
+++ b/src/topics/gestalt-theory/index.mdx
@@ -788,7 +788,7 @@ The original NBC peacock logo was much busier than its current design. The peaco
 
 ### Good Form
 
-This principle combines many of the other principles in this section: we group together elements that are similar in size, shape, pattern, form, color, and so on. For example, the Olymping Rings shown below are grouped together by their _similarity_ in shape and size. This particular illustration also displays _closure_ since we understand each circle to be a complete ring intertwined with the other circles. Though there are 3 unique shapes among the 5 rings (i.e. they are not identical copies), we understand them to be individual components of one group together.
+This principle combines many of the other principles in this section: we group together elements that are similar in size, shape, pattern, form, color, and so on. For example, the Olymping Rings shown below are grouped together by their _similarity_ in shape and size. This particular illustration also displays _closure_ since we understand each circle to be a complete ring intertwined with the other circles. Though there are 3 unique shapes among the 5 rings (i.e. they are not identical copies), we understand them to be individual, similar components of one group together.
 
 <figure>
 <Panel>
@@ -812,6 +812,49 @@ This principle combines many of the other principles in this section: we group t
     },
   ]}
 />
+</figure>
+
+## Figure-Ground Relationship
+
+This is the relationship between a form/figure and its background, or the interaction of positive and negative space.
+
+A reversible or ambiguous figure-ground relationship can display _multistability_ and alternate between multiple interpretations.
+
+<figure>
+
+  <div className="grid gap-6 md:grid-cols-3">
+    <div className="w-full h-full">
+      <Panel defaultPadding={false}>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" className="fill-current w-full h-full">
+          <path d="M145.32,0A50.86,50.86,0,0,0,134.9,70.63,37.33,37.33,0,0,1,193.44,88.4a50.29,50.29,0,0,0,6.56-3V0Z"/>
+          <path d="M157.94,137.34a37.34,37.34,0,0,1-37.33-37Q117,100,113.2,100A86.5,86.5,0,0,0,70,111.5a43.57,43.57,0,0,0,4.36-19.08,44,44,0,0,0-.66-7.58A37.35,37.35,0,0,1,14,54.92c0-1.09.06-2.16.15-3.23A44.09,44.09,0,0,0,0,60.87V124a44.18,44.18,0,0,0,13.05,8.73,50.09,50.09,0,0,1,36-4.33c1.53.39,3,.86,4.51,1.39A50,50,0,0,1,80.86,200H199a86.94,86.94,0,0,0-19.66-69.41A37.12,37.12,0,0,1,157.94,137.34Z"/>
+          <path d="M66.34,54.92A29.93,29.93,0,0,0,82.8,0H49.87A29.93,29.93,0,0,0,36.74,20.55,29.56,29.56,0,0,0,36.41,25,29.93,29.93,0,0,0,66.34,54.92Z"/>
+        </svg>
+      </Panel>
+      <figcaption>Ambiguous</figcaption>
+    </div>
+    <div className="w-full h-full">
+      <Panel defaultPadding={false}>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" className="fill-current w-full h-full">
+          <path d="M145.32,0A50.86,50.86,0,0,0,134.9,70.63,37.33,37.33,0,0,1,193.44,88.4a50.29,50.29,0,0,0,6.56-3V0Z"/>
+          <path d="M157.94,137.34a37.34,37.34,0,0,1-37.33-37Q117,100,113.2,100A86.5,86.5,0,0,0,70,111.5a43.57,43.57,0,0,0,4.36-19.08,44,44,0,0,0-.66-7.58A37.35,37.35,0,0,1,14,54.92c0-1.09.06-2.16.15-3.23A44.09,44.09,0,0,0,0,60.87V124a44.18,44.18,0,0,0,13.05,8.73,50.09,50.09,0,0,1,36-4.33c1.53.39,3,.86,4.51,1.39A50,50,0,0,1,80.86,200H199a86.94,86.94,0,0,0-19.66-69.41A37.12,37.12,0,0,1,157.94,137.34Z"/>
+          <path d="M66.34,54.92A29.93,29.93,0,0,0,82.8,0H49.87A29.93,29.93,0,0,0,36.74,20.55,29.56,29.56,0,0,0,36.41,25,29.93,29.93,0,0,0,66.34,54.92Z"/>
+        </svg>
+      </Panel>
+      <figcaption>Ambiguous</figcaption>
+    </div>
+    <div className="w-full h-full">
+      <Panel defaultPadding={false}>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" className="fill-current w-full h-full">
+          <path d="M145.32,0A50.86,50.86,0,0,0,134.9,70.63,37.33,37.33,0,0,1,193.44,88.4a50.29,50.29,0,0,0,6.56-3V0Z"/>
+          <path d="M157.94,137.34a37.34,37.34,0,0,1-37.33-37Q117,100,113.2,100A86.5,86.5,0,0,0,70,111.5a43.57,43.57,0,0,0,4.36-19.08,44,44,0,0,0-.66-7.58A37.35,37.35,0,0,1,14,54.92c0-1.09.06-2.16.15-3.23A44.09,44.09,0,0,0,0,60.87V124a44.18,44.18,0,0,0,13.05,8.73,50.09,50.09,0,0,1,36-4.33c1.53.39,3,.86,4.51,1.39A50,50,0,0,1,80.86,200H199a86.94,86.94,0,0,0-19.66-69.41A37.12,37.12,0,0,1,157.94,137.34Z"/>
+          <path d="M66.34,54.92A29.93,29.93,0,0,0,82.8,0H49.87A29.93,29.93,0,0,0,36.74,20.55,29.56,29.56,0,0,0,36.41,25,29.93,29.93,0,0,0,66.34,54.92Z"/>
+        </svg>
+      </Panel>
+      <figcaption>Ambiguous</figcaption>
+    </div>
+  </div>
+
 </figure>
 
 ## Sample Interface: LOCUS
@@ -858,6 +901,6 @@ We mostly separate those groupings by **common region**. The navigational bar is
 
 The chart could just be a random group of lines, but because they share a **common fate**, they are perceived as related. Within the chart, the bars use **similarity** with their colors to show which sets are grouped together.
 
-Within the Forecast panel, we see 3 distinct informational sections that are grouped by their **similarity**. Each section shows good **continuity** to guide us from left to right. We can enforce that continuity by centering or aligning items vertically. Here, the "Local Point" text aligns to the top of "14km" and "51 km from your location" aligns to the bottom, creating a tidy appearance and an implied horizontal line across the screen.
+Within the Forecast panel, we see 3 distinct informational sections that are grouped by their **similarity**. Each section shows good **continuation** to guide us from left to right. We can enforce that continuity by centering or aligning items vertically. Here, the "Local Point" text aligns to the top of "14km" and "51 km from your location" aligns to the bottom, creating a tidy appearance and an implied horizontal line across the screen.
 
 The whole design uses a greyish-blue except for the "warning" bars and "I've felt it" button, which both use the contrast of red to create a **focal point** that urges the viewer to use caution (top bars) or take action (by tapping the button).
