added topic prefooter

--- a/src/topics/icons-for-navigation/index.mdx
+++ b/src/topics/icons-for-navigation/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: Icons for Navigation
+topic: design-elements
 ---
 
 Straightforward concepts are easier to understand than abstract ones. This is especially important when selecting icons for an application. If you choose to use icons, the fastest-interpreted option will perform better than one that is too detailed.
 
 Even then, [label your icons](https://uxdesign.cc/label-your-icons-e2bd57366d37) to make the interpretation and association even easier.
-
 
 <Blockquote
   author="Mary Formanek"
@@ -13,10 +13,19 @@ Even then, [label your icons](https://uxdesign.cc/label-your-icons-e2bd57366d37)
   title="Label Your Icons"
 >
   <p>
-    [S]aying that the users will know what it is because they have seen it everywhere is like saying that anyone can identify any kind of tree because they have seen a tree before. Just because I have seen a tree doesn't mean I can identify a maple tree. And for icons, this can be compared to seeing a hamburger icon and a house icon and they both mean “menu”.
+    [S]aying that the users will know what it is because they have seen it
+    everywhere is like saying that anyone can identify any kind of tree because
+    they have seen a tree before. Just because I have seen a tree doesn't mean I
+    can identify a maple tree. And for icons, this can be compared to seeing a
+    hamburger icon and a house icon and they both mean “menu”.
   </p>
   <p>
-    This “they will know what it means” logic does not work. Not only does it not make sense, but following that logic is literally making an assumption for the user. <strong>We are not the users.</strong> What we assume they have seen is probably not what they have actually seen. We should never assume the users will understand things because we think its basic knowledge.
+    This “they will know what it means” logic does not work. Not only does it
+    not make sense, but following that logic is literally making an assumption
+    for the user. <strong>We are not the users.</strong> What we assume they
+    have seen is probably not what they have actually seen. We should never
+    assume the users will understand things because we think its basic
+    knowledge.
   </p>
 </Blockquote>
 
