--- a/src/topics/animation/index.mdx
+++ b/src/topics/animation/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: Animation
+topic: interaction
+draft: true
 ---
 
 Get examples from https://www.interaction-design.org/literature/article/bad-design-vs-good-design-5-examples-we-can-learn-frombad-design-vs-good-design-5-examples-we-can-learn-from-130706
