WIP Gestalt check-in

--- a/src/topics/color-blindness/index.mdx
+++ b/src/topics/color-blindness/index.mdx
@@ -1,11 +1,10 @@
 ---
 title: Color Blindness
-reading:
-  optional:
-    - title: "Stop Designing For Only 85% Of Users: Nailing Accessibility In Design"
-      link: https://www.smashingmagazine.com/2017/10/nailing-accessibility-design/
-    - title: "Improving The Color Accessibility For Color-Blind Users"
-      link: https://www.smashingmagazine.com/2016/06/improving-color-accessibility-for-color-blind-users/
+resources:
+  - title: "Stop Designing For Only 85% Of Users: Nailing Accessibility In Design"
+    link: https://www.smashingmagazine.com/2017/10/nailing-accessibility-design/
+  - title: "Improving The Color Accessibility For Color-Blind Users"
+    link: https://www.smashingmagazine.com/2016/06/improving-color-accessibility-for-color-blind-users/
 ---
 
 <Blockquote
